Fix text overlap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -186,6 +186,7 @@ margin: 0 0 1rem 1rem;
     font-size: 1.5em;
     font-weight: bolder;
     font-style: unset;
+    line-height: 1em;
   }
 
   .summary {
